@@ -9,14 +9,16 @@
 
 module t;
    // verilator lint_off UNOPTFLAT
+   // verilator lint_off PROCASSINIT
    logic clk = 0;
    // verilator lint_on UNOPTFLAT
+   // verilator lint_on PROCASSINIT
    always #2 clk = ~clk;
 
    // verilator lint_off UNDRIVEN
    wire[3:0] x;
    // verilator lint_on UNDRIVEN
-   reg[3:0] cyc = 0;
+   bit [3:0] cyc;
    wire[3:0] #3 val1;
    wire[3:0] #3 val2;
    wire[3:0] #5 val3 = cyc;
